# roam-proto

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: lib.rs
src/v1/agent/: service.proto
src/v1/control/: service.proto
src/v1/query/: service.proto
src/v1/schema/: service.proto
tests/: unit_tests.rs
tests/unit/: struct_field_tests.rs
