[package]
name = "oam-proto"
version = "0.1.1"
edition = "2021"
description = "Shared Protocol Buffer definitions for the OAM Framework"
license = "MIT OR Apache-2.0"
authors = ["OAMRS Contributors"]
repository = "https://github.com/oamrs/roam"
keywords = ["grpc", "protobuf", "agent", "oam"]
categories = ["network-programming"]

[dependencies]
prost = "0.12"
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
protobuf-src = "1.1"
