[package]
name = "schemabound-proto"
version = "0.1.0"
edition = "2021"
description = "Shared Protocol Buffer definitions for the Schemabound Framework"
license = "MIT OR Apache-2.0"
authors = ["Schemabound Contributors"]
repository = "https://github.com/schemabound/enterprise"
readme = "README.md"
keywords = ["grpc", "protobuf", "agent", "schemabound"]
categories = ["network-programming"]

[dependencies]
prost = "0.12"
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
protobuf-src = "1.1"
